Archive2/6c/32654f58fc62db/output
main.cpp:2:1: error: use of undeclared identifier 'std'
std::atomic<int> mailbox[num_mailboxes];
^
main.cpp:2:12: error: expected unqualified-id
std::atomic<int> mailbox[num_mailboxes];
           ^
main.cpp:5:1: error: use of undeclared identifier 'std'
std::atomic_store_explicit(&mailbox[i], receiver_id, std::memory_order_release);
^
main.cpp:8:1: error: expected unqualified-id
for (int i = 0; i < num_mailboxes; ++i) {
^
4 errors generated.
